corrects spacing css

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
 /*————————————————————————————————————————————————————————————————*/
 /* general */
 
-html * {max-height:1000000px;}
+html * {
+  max-height:1000000px;
+}
 
 :root {
   --bg-color: rgb(255, 246, 234);
